setup dev and prod databases
