# models/User.js
@@ -16,18 +16,18 @@ const userSchema = mongoose.Schema({
     },
     password: {
         type: String,
-        require: true
-    },
-    channels: [{
-        type: String
-    }],
-    hash: {
-        type: String, required: true
+        required: true
     },
     mobileNumber: {
         type: Number,
         require: true,
-        unique: true
+        unique: true,
+        validate: {
+            validator: function(v) {
+                return /^\d{10}$/.test(v);
+            },
+            message: '{VALUE} is not a valid 10 digit number!'
+        }
     },
     createdDate: {
         type: Date, default: Date.now
